@@ -59,6 +59,9 @@ Bug Fixes
   (Ignacio Vera)   
 
 * LUCENE-9606: Wrap boolean queries generated by shape fields with a Constant score query. (Ignacio Vera)  
+
+* LUCENE-9635: BM25FQuery - Mask encoded norm long value in array lookup.
+  (Yilun Cui)
   
 Other
 ---------------------
